objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Effective_Item_Start_Date__c</fullName>
        <label>Effective_Item_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_End_Date__c</fullName>
        <label>Item_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vault_Licenses__c</fullName>
        <label>Vault_Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>